<resources>
    <string name="launcher_name">AI News</string>
    <string name="app_name">Artificial Intelligence News</string>

    <!-- Buttons -->
    <string name="more_button">more articles</string>
    <string name="refresh_button">refresh</string>

    <!--Special Messages-->
    <string name="no_connection">No internet connection</string>
    <string name="no_articles">No articles found</string>
    <string name="toast_no_connection">No internet connection\nCan\'t load articles</string>
    <string name="toast_no_connection_new">No internet connection\nCan\'t load new articles</string>
    <string name="message_invalid_articles_num">Invalid number of Articles Check Settings</string>
    
    <!-- Settings Activity Strings -->
    <string name="settings_appbar_title">Articles Settings</string>
    <string name="settings_menu_item">Settings</string>

    <!-- Preference - Order_by -->
    <string name="order_by_pref_key">order_by</string>
    <string name="order_by_pref_label">Order By Newest</string>
    <string name="order_by_pref_summary">Check to show the newest articles first</string>
    <string name="order_by_pref_default">false</string>

    <!-- Preference - page_size -->
    <string name="page_size_pref_key">page_size</string>
    <string name="page_size_pref_label">Articles per page</string>
    <string name="page_size_pref_default">10</string>
    <string name="page_size_pref_hint">Between 1 to 50</string>

    <!-- Preference - category -->
    <string name="category_pref_key">by_category</string>
    <string name="category_pref_label">Show Category</string>
    <string name="category_pref_default">@string/category_all_value</string>

    <!--List items for category Preference-->
    <string name="category_all_label">All</string>
    <string name="category_all_value">all</string>

    <string name="category_technology_label">Technology</string>
    <string name="category_technology_value">technology</string>

    <string name="category_education_label">Education</string>
    <string name="category_education_value">education</string>

    <string name="category_science_label">Science</string>
    <string name="category_science_value">science</string>

</resources>
