<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/order_by_pref_key"
        android:title="@string/order_by_pref_label"
        android:summary="@string/order_by_pref_summary"
        android:defaultValue="@string/order_by_pref_default" />

    <EditTextPreference
        android:hint="@string/page_size_pref_hint"
        android:defaultValue="@string/page_size_pref_default"
        android:inputType="numberDecimal"
        android:key="@string/page_size_pref_key"
        android:selectAllOnFocus="true"
        android:title="@string/page_size_pref_label" />

    <ListPreference
        android:defaultValue="@string/category_pref_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/category_pref_key"
        android:title="@string/category_pref_label" />


</PreferenceScreen>